[package]
name = "mmm"
version = "0.3.2"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
doubuff = { git = "https://github.com/oranellis/doubuff-rs.git", version = "0.1.2" }
futures = "0.3.31"
terminal-vec2 = { git = "https://github.com/oranellis/terminal-vec2-rs.git", tag = "v0.1.0", version = "0.1.0" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
